[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/IconPack/IconPackByAndelRodis/pngonebyone/leftarrow.png" type="Texture" id=1]
[ext_resource path="res://assets/shortest_path/lvl3.png" type="Texture" id=2]
[ext_resource path="res://assets/shortest_path/lvl1.png" type="Texture" id=3]
[ext_resource path="res://assets/shortest_path/lvl2.png" type="Texture" id=4]
[ext_resource path="res://scenes/NivelesCamino.gd" type="Script" id=5]
[ext_resource path="res://resources/temita.tres" type="Theme" id=6]
[ext_resource path="res://assets/IconPack/IconPackByAndelRodis/pngonebyone/playbuttonpdn.png" type="Texture" id=7]
[ext_resource path="res://assets/shortest_path/0_estrellas.PNG" type="Texture" id=8]

[node name="NivelesCamino" type="Node2D"]
script = ExtResource( 5 )

[node name="Niveles2" type="Node2D" parent="."]
scale = Vector2( 0.47, 0.47 )

[node name="lvl1" type="TextureButton" parent="Niveles2"]
margin_left = 153.191
margin_top = 612.766
margin_right = 853.192
margin_bottom = 1012.77
texture_normal = ExtResource( 3 )

[node name="lvl2" type="TextureButton" parent="Niveles2"]
margin_left = 153.191
margin_top = 1157.45
margin_right = 853.191
margin_bottom = 1557.45
texture_normal = ExtResource( 4 )

[node name="lvl3" type="TextureButton" parent="Niveles2"]
margin_left = 153.191
margin_top = 1719.15
margin_right = 853.192
margin_bottom = 2119.15
texture_normal = ExtResource( 2 )

[node name="Niveles" type="Label" parent="."]
margin_left = 270.0
margin_top = 139.0
margin_right = 393.0
margin_bottom = 182.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 6 )
text = "Niveles"

[node name="Puntaje Obtenido" type="Label" parent="."]
margin_left = 416.0
margin_top = 304.0
margin_right = 714.0
margin_bottom = 347.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="estrellas_nivel_1" type="Sprite" parent="."]
position = Vector2( 558, 404 )
scale = Vector2( 0.438333, 0.456349 )
texture = ExtResource( 8 )

[node name="Puntaje Obtenido2" type="Label" parent="."]
margin_left = 414.0
margin_top = 550.0
margin_right = 712.0
margin_bottom = 593.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="estrellas_nivel_2" type="Sprite" parent="."]
position = Vector2( 558, 668 )
scale = Vector2( 0.438333, 0.456349 )
texture = ExtResource( 8 )

[node name="Puntaje Obtenido3" type="Label" parent="."]
margin_left = 416.0
margin_top = 816.0
margin_right = 714.0
margin_bottom = 859.0
theme = ExtResource( 6 )
text = "Puntaje obtenido:"

[node name="estrellas_nivel_3" type="Sprite" parent="."]
position = Vector2( 558, 927 )
scale = Vector2( 0.438333, 0.456349 )
texture = ExtResource( 8 )

[node name="1" type="Label" parent="."]
margin_left = 36.0
margin_top = 362.0
margin_right = 56.0
margin_bottom = 405.0
theme = ExtResource( 6 )
text = "1"

[node name="2" type="Label" parent="."]
margin_left = 36.0
margin_top = 612.0
margin_right = 56.0
margin_bottom = 655.0
theme = ExtResource( 6 )
text = "2"

[node name="3" type="Label" parent="."]
margin_left = 34.0
margin_top = 859.0
margin_right = 54.0
margin_bottom = 902.0
theme = ExtResource( 6 )
text = "3"

[node name="atras" type="TextureButton" parent="."]
margin_left = 580.0
margin_top = 30.0
margin_right = 1180.0
margin_bottom = 630.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 1 )

[node name="Playbuttons" type="Node2D" parent="."]
scale = Vector2( 0.15, 0.15 )

[node name="play1" type="Sprite" parent="Playbuttons"]
position = Vector2( 1560, 2626.67 )
texture = ExtResource( 7 )

[node name="play2" type="Sprite" parent="Playbuttons"]
position = Vector2( 1540, 4226.67 )
texture = ExtResource( 7 )

[node name="play3" type="Sprite" parent="Playbuttons"]
position = Vector2( 1506.67, 6000 )
texture = ExtResource( 7 )
